--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,10 @@ dependencies = [
     "accelerate>=0.34.2",
     "diffusers>=0.30.2",
     "python-slugify>=8.0.4",
+    "setuptools>=74.1.2",
     "torch>=2.4.1",
     "transformers>=4.44.2",
+    "xformers>=0.0.28.post1",
 ]
 
 [tool.uv]
