--- a/.github/workflows/push-format-python.yml
+++ b/.github/workflows/push-format-python.yml
@@ -21,7 +21,7 @@ jobs:
           cache-dependency-glob: "uv.lock"
 
       - name: uv sync
-        run: uv sync
+        run: uv sync --frozen
 
       - name: ruff format check
         run: uv run ruff format --check
