--- a/.github/workflows/push-lint-markdown.yml
+++ b/.github/workflows/push-lint-markdown.yml
@@ -21,7 +21,7 @@ jobs:
           cache-dependency-glob: "uv.lock"
 
       - name: uv sync
-        run: uv sync
+        run: uv sync --frozen
 
       - name: markdownlint
         run: uv run pymarkdown scan .
