--- a/.github/workflows/push-lint-python.yml
+++ b/.github/workflows/push-lint-python.yml
@@ -20,5 +20,8 @@ jobs:
           enable-cache: true
           cache-dependency-glob: "uv.lock"
 
+      - name: uv sync
+        run: uv sync --frozen
+
       - name: ruff check
         run: uv run ruff check
