--- a/.github/workflows/push-format-python.yml
+++ b/.github/workflows/push-format-python.yml
@@ -20,8 +20,5 @@ jobs:
           enable-cache: true
           cache-dependency-glob: "uv.lock"
 
-      - name: uv sync
-        run: uv sync --frozen
-
       - name: ruff format check
-        run: uv run ruff format --check
+        run: uv run --locked ruff format --check
