--- a/.github/workflows/push-lint-markdown.yml
+++ b/.github/workflows/push-lint-markdown.yml
@@ -24,4 +24,4 @@ jobs:
         run: uv sync --frozen
 
       - name: markdownlint
-        run: uv run pymarkdown scan .
+        run: uv run --locked pymarkdown scan .
