--- a/.github/workflows/push-lint-python.yml
+++ b/.github/workflows/push-lint-python.yml
@@ -24,4 +24,4 @@ jobs:
         run: uv sync --frozen
 
       - name: ruff check
-        run: uv run ruff check
+        run: uv run --locked ruff check
