--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ requires-python = ">=3.11"
 dependencies = [
     "accelerate>=0.34.2",
     "diffusers>=0.30.2",
+    "protobuf>=5.28.1",
     "python-slugify>=8.0.4",
+    "sentencepiece>=0.2.0",
     "setuptools>=74.1.2",
     "torch>=2.4.1",
     "transformers>=4.44.2",
