--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "accelerate>=0.34.2",
     "diffusers>=0.30.2",
+    "optimum-quanto>=0.2.4",
     "protobuf>=5.28.1",
     "python-slugify>=8.0.4",
     "sentencepiece>=0.2.0",
