--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,13 @@ dependencies = [
     "diffusers>=0.30.2",
     "optimum-quanto>=0.2.4",
     "protobuf>=5.28.1",
+    "python-ffmpeg>=2.0.12",
     "python-slugify>=8.0.4",
     "sentencepiece>=0.2.0",
     "setuptools>=74.1.2",
+    "soundfile>=0.12.1",
     "torch>=2.4.1",
+    "torchsde>=0.2.6",
     "transformers>=4.44.2",
     "xformers>=0.0.28.post1",
 ]
