--- a/.github/workflows/pr-auto-merge.yml
+++ b/.github/workflows/pr-auto-merge.yml
@@ -1,4 +1,4 @@
-name: Dependabot Auto Merge
+name: Auto Merge
 
 on: pull_request
 
@@ -7,11 +7,10 @@ permissions:
   pull-requests: write
 
 jobs:
-  dependabot-auto-merge:
+  flag-pr:
     runs-on: ubuntu-22.04
-    if: github.event.pull_request.user.login == 'dependabot[bot]'
     steps:
-      - name: Enable Auto Merge for Dependabot PRs
+      - name: Flag PR as Auto Mergeable
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
           GH_TOKEN: ${{secrets.GITHUB_TOKEN}}
