--- a/.github/workflows/pr-lint-markdown.yml
+++ b/.github/workflows/pr-lint-markdown.yml
@@ -1,9 +1,11 @@
-name: Check Python Formatting
+name: Lint Markdown
 
-on: push
+on:
+  pull_request:
+  merge_group:
 
 jobs:
-  ruff-format-check:
+  markdown-lint:
     runs-on: ubuntu-22.04
     steps:
       - name: Git Checkout
@@ -20,5 +22,5 @@ jobs:
           enable-cache: true
           cache-dependency-glob: "uv.lock"
 
-      - name: ruff format check
-        run: uv run --locked --only-dev ruff format --check
+      - name: markdownlint
+        run: uv run --locked --only-dev pymarkdown scan .
