--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "accelerate>=0.34.2",
+    "beautifulsoup4>=4.12.3",
     "diffusers>=0.30.2",
+    "ftfy>=6.3.1",
     "protobuf>=5.28.1",
     "python-ffmpeg>=2.0.12",
     "python-slugify>=8.0.4",
